k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: life
  namespace: life
spec:
  replicas: 1
  selector:
    matchLabels:
      app: life
  template:
    metadata:
      labels:
        app: life
    spec:
      containers:
        - name: life
          image: node:20-alpine
          command: ["npm", "run", "start"]
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
          ports:
            - containerPort: 3000
