k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: life
  namespace: life
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: life
