k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: life
  namespace: life
spec:
  rules:
    - host: yoshikouki.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: life
                port:
                  number: 80
